-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.0, 4.7.1
-
None
-
1689f5c557f686b7ad0ab68385402e928e590a13
The sbsv2 (and abld) Makefile generators do not add the "# Command:" line into the header of the Makefiles it generates.
This line is expected to be there by Qt Creator: If it is not, then it assumes the Makefile to be not generated by qmake and thus runs qmake again. So this missing line leads to longer build times for Symbian developers.
The Nokia Qt SDK people agree that this is an issue that needs to be fixed for Qt 4.7.2, thus I am setting this to P1.
- is required for
-
QTCREATORBUG-4555 Wrong warning when building for Symbian
-
- Closed
-
- relates to
-
QTCREATORBUG-3062 Data deployment for Symbian: Added files only deployed after qmake is run
-
- Closed
-